syntax = "proto3";

package NAlice.NNlu;

option go_package = "a.yandex-team.ru/alice/nlu/proto/entities";
option java_package = "ru.yandex.alice.nlu.proto.entities";

message TCustomEntityValue {
    optional string Type           = 1;
    optional string Value          = 2;
    optional double LogProbability = 3;
}

message TCustomEntityValues {
    repeated TCustomEntityValue CustomEntityValues   = 1;
}
